--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Basic
 name:               "PedroR"
-description:        "a clean, lightweight and minimalistic blog theme for jekyll"
+description:        ""
 
 # jekyll-seo-tag, see: http://www.rubydoc.info/gems/jekyll-seo-tag/1.2.0
 url:                "//pedror.com"
